--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                     </tr>
                     <tr>
                         <td>101338472</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>Chris K</td>
+                        <td>Pistachio</td>
+                        <td>🙃</td>
+                        <td>https://chriskkim.com</td>
                     </tr>
                     <tr>
                         <td>101357299</td>
