Major update to index.html

--- a/index.html
+++ b/index.html
@@ -16,123 +16,11 @@
 
     <div class="container py-5">
 
-        <h1>Hello 👋 World 🌎</h1>
+        <h1>CK's world 🌎</h1>
 
         <p class="lead">
-            This is a collaborative web page set up for the BDES4702 (Fall 24) cohort.
+            This is my own microsite 👿
         </p>
-
-        <div class="table-responsive">
-            <table class="table" style="table-layout: fixed">
-                <thead class="table-dark">
-                    <th>
-                        Student ID
-                    </th>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        Favourite ice cream
-                    </th>
-                    <th>
-                        Favourite emoji
-                    </th>
-                    <th>
-                        URL
-                    </th>
-                </thead>
-                <tbody>
-
-                    <tr>
-                        <td>101390508</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101331758</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101373466</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101380160</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101354237</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101151826</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101387005</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101399976</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101338472</td>
-                        <td>Chris K</td>
-                        <td>Pistachio</td>
-                        <td>🙃</td>
-                        <td>https://chriskkim.com</td>
-                    </tr>
-                    <tr>
-                        <td>101357299</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101376216</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>101386932</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-
-
-                </tbody>
-
-            </table>
-        </div>
 
     </div>
 
