Added exclamation mark

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>CK's world 🌎</h1>
 
         <p class="lead">
-            This is my own microsite 👿
+            This is my own microsite! 👿
         </p>
 
     </div>
